/**
 * @file state.proto
 * Define message format for entire state object
 */

/**
 * Version: Proto3 explicit declaration
 */
syntax = "proto3";

/**
 * Package specifier to prevent name clashes 
 * between protocol message types
 */
package IPC;

/**
 * Message describes the state object
 * Repeated: Map a vector
 * Enum: Composite message type with open enum types
 * Enum defaults to value set with tag 0
 */
message State {

	/**
	 * Message describes base class actor
	 */
	message Actor {
		int64 id = 1;
		int64 player_id = 2;
		int64 pos_x = 3;
		int64 pos_y = 4;
		int64 attack = 5;
		int64 hp = 6;
		int64 max_hp = 7;

		/**
		 * Set type of actor
		 * Default to actor with tag 0
		 */
		enum Actor_type {
			ARCHER = 0;
			ARROW = 1;
			BASE = 2;
			FLAG = 3;
			KING = 4;
			SCOUT = 5;
			SWORDSMAN = 6;
			TOWER = 7;
		}
		Actor_type actor_type = 11;
	}

	/**
	 * Expects a vector of actors
	 */
	repeated Actor actors = 1;
}
